# Norconf

./: Dockerfile  README.md  alcatel_sros.txt  black-norconf.py  config.yml  docker-compose.yml  iosxr.txt  norconf.py  payload.txt  pyproject.toml  requirements.txt  scrapconf.py
Output/alcatel_sros/: cli_stats-AVIFI.txt
Output/iosxr/: cli_stats-AVIFI.txt
data/: R1_SROS_PE.yml  R2_IOSXR_PE.yml  R3_SROS_PE.yml  R8_IOSXR_PE.yml
inventory/: defaults.yml  groups.yml  hosts.yml
templates/: alcatel_sros-vrf.j2  iosxr-vrf.j2  sros-vrf.j2
tests/: R8_IOSXR_PE-compliance.yml
vars/: R3_SROS_PE.yml  R8_IOSXR_PE.yml
